@startuml

title __DIAGRAM's Class Diagram__\n

  package org.pmesmeur.org.pmesmeur.sketchit {
    package org.pmesmeur.org.pmesmeur.sketchit.diagram {
      class JavaFileFinder {
          - project : Project
          - module : Module
          - javaFiles : List<PsiJavaFile>
          - directories : Set<VirtualFile>
          + JavaFileFinder()
          + getFoundFiles()
          + getFoundDirectories()
          - find()
          - findFiles()
          - psiFileBelongsToCurrentModule()
      }
    }
  }
  

  package org.pmesmeur.org.pmesmeur.sketchit {
    package org.pmesmeur.org.pmesmeur.sketchit.diagram {
      class UmlComponentDiagram {
          - project : Project
          + UmlComponentDiagram()
          # getOutputFile()
          # generateDiagram()
          - getDiagramGeneratorBuilder()
      }
    }
  }
  

  package org.pmesmeur.org.pmesmeur.sketchit {
    package org.pmesmeur.org.pmesmeur.sketchit.diagram {
      abstract class UmlDiagram {
          {static} - LOG : Logger
          {static} - FILE_EXTENSION : String
          + generate()
          {abstract} # getOutputFile()
          - generateDiagram()
          {abstract} # generateDiagram()
          - deleteEmptyFile()
          # createOutputFileName()
      }
    }
  }
  

  package org.pmesmeur.org.pmesmeur.sketchit {
    package org.pmesmeur.org.pmesmeur.sketchit.diagram {
      class UmlDiagramsGenerator {
          - project : Project
          + UmlDiagramsGenerator()
          + generateComponentDiagram()
          + generateClassDiagrams()
          - generateModuleClassDiagram()
          - generateModuleClassDiagramForEachSourceDirectory()
          - generateModuleClassDiagramForSourceDirectory()
      }
    }
  }
  

  package org.pmesmeur.org.pmesmeur.sketchit {
    package org.pmesmeur.org.pmesmeur.sketchit.diagram {
      class UmlModuleClassDiagram {
          - project : Project
          - module : Module
          + UmlModuleClassDiagram()
          # getOutputFile()
          - getClassDiagramOutputStream()
          # generateDiagram()
          - getDiagramGeneratorBuilder()
      }
    }
  }
  

  package org.pmesmeur.org.pmesmeur.sketchit {
    package org.pmesmeur.org.pmesmeur.sketchit.diagram {
      class UmlSourceDirectoryClassDiagram {
          - project : Project
          - module : Module
          - moduleDirectory : VirtualFile
          + UmlSourceDirectoryClassDiagram()
          # getOutputFile()
          # generateDiagram()
          - getDiagramGeneratorBuilder()
      }
    }
  }
  

  UmlComponentDiagram -up-|> UmlDiagram
  UmlModuleClassDiagram -up-|> UmlDiagram
  UmlSourceDirectoryClassDiagram -up-|> UmlDiagram


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
